source/gameengine/BlenderRoutines/BL_KetsjiEmbedStart.cpp
@@ -359,25 +359,22 @@ extern "C" void StartKetsjiShell(struct bContext *C, struct ARegion *ar, rcti *c
 		}
 
 		// some blender stuff
-		float camzoom;
+		float camzoom = 1.0f;
 		int draw_letterbox = 0;
-		
+
 		if (rv3d->persp==RV3D_CAMOB) {
 			if (startscene->gm.framing.type == SCE_GAMEFRAMING_BARS) { /* Letterbox */
-				camzoom = 1.0f;
 				draw_letterbox = 1;
 			}
 			else {
 				camzoom = 1.0f / BKE_screen_view3d_zoom_to_fac(rv3d->camzoom);
 			}
 		}
-		else {
-			camzoom = 2.0;
-		}
 
 		rasterizer->SetDrawingMode(drawtype);
 		ketsjiengine->SetCameraZoom(camzoom);
-		
+		ketsjiengine->SetCameraOverrideZoom(2.0f);
+
 		// if we got an exitcode 3 (KX_EXIT_REQUEST_START_OTHER_GAME) load a different file
 		if (exitrequested == KX_EXIT_REQUEST_START_OTHER_GAME || exitrequested == KX_EXIT_REQUEST_RESTART_GAME)
 		{
